objects/maps__CalEventBaseObj__c.object
<CustomObject>
    <fields>
        <fullName>maps__BaseObjectField__c</fullName>
        <label>Maps Base Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EventObject__c</fullName>
        <label>EventObject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maps Calendar Event Base Object</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>maps__Enabled__c</columns>
        <columns>maps__EventObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Maps Calendar Event Base Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Calendar Event Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>